new responsive design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG0M389MPX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RG0M389MPX');
+</script>
   <title>Algorand.TV - Algorand Blockchain Video Playlist</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,24 +21,26 @@
 <style>
 body {
   background-color: #343a40;
+  color: #ffffff;
 }
+.video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
 
-table {
-
-  border-collapse: separate;
-  border-spacing: 15px;
+.video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.responsive {
+  max-width: 100%;
+  height: auto;
 }
 </style>
+
+
 <body >
-<table class="table-dark"><tr><td><iframe width="1200" height="780" src="https://www.youtube.com/embed/videoseries?list=PLEx6pvSIpmm7l1Ma6rLV4a-PWT-1c1mpB" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></td>
-<td valign="top">
-<center><h1>Algorand Blockchain Playlist</h1></center>
+
+
+<div class="video-container"><iframe width="1200" height="780" src="https://www.youtube.com/embed/videoseries?list=PLEx6pvSIpmm7l1Ma6rLV4a-PWT-1c1mpB" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div><div class="container"> <br><center><h1>Algorand Blockchain Playlist</h1></center>
 <b>Interviews: </b>Silvio Micali (Founder,Turing Award Recipient), Steve Kokinos (CEO), Sean Ford (COO), Massimo Morini (CEO), Jason Weathersby, Sam Abbassi, Tal Rabin, Naveed Ihsanullah, Paul Riegle, Russell Fustino, Jing Chen, Sean Lee, Keli Callaghan, Addie Wagenknecht, Paul Riegle.<br>
 <b>Technology:</b> Public Permissionless Blockchain Platform, Cryptography, Pure Proof Of Stake, Stacking rewards, Byzantine Fault Tolerant Consensus, Distributed ledger, Pointproofs<br> 
 <b>Developer Office Hours:</b> Algorand Smart Contracts and TEAL, Python SDK, JavaScript SDK, Docker, DeFi, Definance, DApps, TestNet, MainNet, Secure, Scability, Scaling, Tokenomics, CBDC, Algorand cryptographic sortition.<br><b>Partners:</b> MIT, Tether, IDEX, Eterna Capital, Arrington XRP Capital, Meld, Xfinite, Planetwatch, Bluemi, Stonize, VeriTX.
-<br><br><center>
-<a href="https://accounts.binance.com/en/register?ref=21771782"><img src="February.gif" width="680" height="340"></a></center>
-</td></tr>	
-</table>
+<br><br><center><br><a href="https://accounts.binance.com/en/register?ref=21771782"><img src="february.gif" alt="Binance Exchange" class="responsive"></a></center><br></div>
+
 
 </body></html>
